--- a/workspace/.gitignore
+++ b/workspace/.gitignore
@@ -26,3 +26,44 @@ data/assets_user/
 # OS cruft
 *.DS_Store
 Thumbs.db
+
+# IDE / editors
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Python bytecode
+*.pyc
+*.pyo
+*.pyd
+.Python
+
+# Executables / libs
+*.exe
+*.dll
+*.pdb
+*.lib
+
+# Unity/Game binaries (keep templates out of repo)
+*.dat
+GameAssembly.dll
+UnityPlayer.dll
+UnityCrashHandler64.exe
+
+# Large binary defaults (allow template assets explicitly)
+*.mp4
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.ico
+*.svg
+!data/templates/assets/**
+
+# User data (runtime)
+UserData/
+UserDataM/
+
+# Reference files (not in repo by design, sibling dir)
+refs/
