--- a/workspace/data/config/user/config.json
+++ b/workspace/data/config/user/config.json
@@ -1,7 +1,9 @@
 {
-  "window_x": 1133,
-  "window_y": 255,
+  "window_x": -330,
+  "window_y": 288,
   "width": 320,
   "height": 320,
-  "topmost": true
+  "pinned": true,
+  "topmost": true,
+  "image_fit_mode": "contain"
 }
