Remove private MMD assets and motion data from repository (MMO待機モーション, 天音かなた公式mmd, きゅーぴっどモーション)

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ refs/
 /Eyedart_Breath_motion_v1.1/
 /MMO用待機モーションセット/
 /天音かなた公式mmd_ver1.0/
+/きゅーぴっど。モーションデータ.fbx
+/きゅーぴっど。モーションデータ.vmd
+
+# MMD assets (local only, not for public repo)
+/MMD/
