Update worklog and fix SimpleModelBootstrapTests

--- a/Unity_PJ/project/Assets/Scripts/Runtime/MascotDesktop.Runtime.asmdef
+++ b/Unity_PJ/project/Assets/Scripts/Runtime/MascotDesktop.Runtime.asmdef
@@ -2,7 +2,8 @@
   "name": "MascotDesktop.Runtime",
   "rootNamespace": "MascotDesktop",
   "references": [
-    "Unity.InputSystem"
+    "Unity.InputSystem",
+    "LibMMD"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
